--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="globals.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Frontend Mentor | QR code component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    Improve your front-end skills by building projects Scan the QR code to visit
-    Frontend Mentor and take your coding skills to the next level
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+    <div class="desktop">
+      <div class="desktop-wrapper">
+        <div class="group-wrapper">
+          <div class="group">
+            <div class="overlap-group">
+              <img class="image-qr-code" src="images/image-qr-code.png" />
+              <p class="improve-your-front">
+                Improve your front-end<br />skills by building projects
+              </p>
+              <p class="scan-the-QR-code-to">
+                Scan the QR code to visit Frontend<br />Mentor and take your
+                coding skills to<br />the next level
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
