--- a/index.html
+++ b/index.html
@@ -2,38 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device; will push this code to new repo, for lab 3-3 -->
-
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
     />
-    <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="styles.css" />
-
-    <title>Frontend Mentor | QR code component</title>
+    <title>Frontend Mentor, QR code component</title>
   </head>
   <body>
-    <div class="desktop">
-      <div class="desktop-wrapper">
-        <div class="group-wrapper">
-          <div class="group">
-            <div class="overlap-group">
-              <img class="image-qr-code" src="images/image-qr-code.png" />
-              <p class="improve-your-front">
-                Improve your front-end<br />skills by building projects
-              </p>
-              <p class="scan-the-QR-code-to">
-                Scan the QR code to visit Frontend<br />Mentor and take your
-                coding skills to<br />the next level
-              </p>
-            </div>
-          </div>
+    <div
+      class="container d-flex justify-content-center align-items-center min-vh-100"
+    >
+      <div class="card card-custom">
+        <img src="images/image-qr-code.png" alt="QR Code" class="qr-image" />
+        <div class="px-3 pb-4">
+          <h2 class="card-title">
+            Improve your front-end skills by building projects
+          </h2>
+          <p class="card-text">
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
         </div>
       </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
